add center class

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -32,13 +32,13 @@
         </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-            <li>
+            <li class="text-center">
               <a href="#">Chicken</a><hr>
             </li>
-            <li>
+            <li class="text-center">
               <a href="#">Beef</a><hr>
             </li>
-            <li>
+            <li class="text-center">
               <a href="#">Sushi</a><hr>
             </li>
           </ul><!-- #nav-list -->
