--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -51,7 +51,8 @@
     <h2 id="main-title" class="text-center">Our Menu</h2>
     <div id="dish" class="row">
       <section class="col-md-12 col-sm-12 col-xs-12">
-        <h3>Kung Pao Chicken</h3>
+        <h3>Chicken</h3>
+        <div class="text-center">Kung Pao Chicken</div>
         INGREDIENTS: <br>
         Marinade
         <ul>
@@ -85,6 +86,37 @@
         <li>You may need to turn on your stove's exhaust fan, because stir-frying dried chilies on high heat can get a little smoky. Heat a wok or large skillet over high heat until a bead of water sizzles and evaporates on contact. Add the peanut oil and swirl to coat the base. Add the chilies and stir-fry for about 30 seconds, or until the chilies have just begun to blacken and the oil is slightly fragrant. Add the chicken and stir-fry until no longer pink, 2 to 3 minutes.</li>
         <li>Add the scallion whites, garlic, and ginger and stir-fry for about 30 seconds. Pour in the sauce and mix to coat the other ingredients. Stir in the peanuts and cook for another 1 to 2 minutes. Transfer to a serving plate, sprinkle the scallion greens on top, and serve.</li>
         </ol>
+        <div class="text-center">Sesame Chicken</div>
+        INGREDIENTS <br>
+        <ul>
+        <li>1 1/2 cups quick-cooking white rice</li>
+        <li>1 3/4 teaspoons kosher salt, divided, plus more</li>
+        <li>8 cups broccoli florets</li>
+        <li>6 tablespoons cornstarch</li>
+        <li>1/2 teaspoon freshly ground black pepper</li>
+        <li>2 pounds boneless skinless chicken thighs, breasts, or a mix, trimmed, patted dry, cut into 1 1/2" chunks</li>
+        <li>4 tablespoons vegetable oil, divided</li>
+        <li>5 tablespoons honey</li>
+        <li>4 tablespoons low-sodium soy sauce</li>
+        <li>3 tablespoons rice wine vinegar</oy>
+        <li>1 tablespoon Sriracha</li>
+        <li>1 large clove garlic, finely grated</li>
+        <li>1 teaspoon finely grated ginger</li>
+        <li>1 1/2 teaspoons toasted sesame oil</li>
+        <li>2 tablespoons toasted sesame seeds, divided</li>
+        <li>2 scallions, thinly sliced</li>
+        </ul>
+        PREPARATION <br>
+        <ol>
+        <li>Cook rice with a pinch of salt according to package directions.
+        Set a steamer basket in a medium pot filled with 1" water, cover pot, and bring water to a boil. Uncover and steam broccoli until crisp-tender, 5–6 minutes. Drain and set aside.</li>
+        <li>Meanwhile, whisk cornstarch, pepper, and 1 1/2 tsp. salt in a large bowl. Add chicken and toss to coat.</li>
+        <li>Heat 2 Tbsp. vegetable oil in a large skillet over high. Add half of the chicken and cook, turning occasionally, until chicken is cooked through and a light brown crust forms, about 5 minutes. Transfer chicken to a plate. Heat remaining 2 Tbsp. vegetable oil; cook remaining chicken and transfer to plate.</li>
+        <li>Combine honey, soy sauce, vinegar, Sriracha, garlic, ginger, sesame oil, 1 Tbsp. sesame seeds, and remaining 1/4 tsp. salt in a medium bowl. Transfer sauce to skillet and cook 1 minute to reduce slightly. Return chicken to skillet, toss in sauce to coat, and cook until sauce is reduced and thickened, about 2 minutes. Fold in reserved broccoli, toss to coat, and remove from heat.</li>
+        <li>Divide chicken and broccoli among 4 plates and top with scallions and remaining 1 Tbsp. sesame seeds. Serve with rice on the side.</li>
+        </ol>
+        Cooks’ Note:
+        Feel free to substitute traditional white or brown rice for quick-cooking rice. Make this meal gluten-free by substituting tamari for the soy sauce.
       </section>
     </div>
   </div>
